sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: '=' expected but ';' found.
  while(i<getValueCount()-2){
^